--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -8,12 +8,14 @@
   </head>
   <body>
     <h1>Articles List</h1>
-    {% for article in articles %}
-    <h2>
-      <a href="#">{{article.title}}</a>
-    </h2>
-    <p>{{article.snippet}}</p>
-    <p>{{article.date}}</p>
-    {% endfor %}
+    <div class="container">
+      {% for article in articles %}
+      <h2>
+        <a href="#">{{article.title}}</a>
+      </h2>
+      <p>{{article.snippet}}</p>
+      <p>{{article.date}}</p>
+      {% endfor %}
+    </div>
   </body>
 </html>
