--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="مشاوره و اجرای کسب و کار دیجیتال از طریق طراحی وب سایت، طراحی اپلیکیشن موبایل و برنامه نویسی پیشرفته با تیم وب سایت شو همراه شوید تا با کیفیت پشتیبانی و تعهدمان شما را به اهداف تان برسانیم" />
         <meta name="author" content="" />
         <title>طراحی سایت ، برنامه نویسی ، وب سایت شو</title>
         <!-- Favicon-->
@@ -20,7 +20,7 @@
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 <div class="container px-5">
                     <a class="navbar-brand" href="">وب سایت شو</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -56,16 +56,16 @@
                 </div>
             </nav>
             <!-- Header-->
-            <header class="bg-dark py-5">
+            <header class="bg-light py-5">
                 <div class="container px-5">
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
-                                <h1 class="h2 fw-bolder text-white mb-2">تیم مجرب طراحی وب سایت و برنامه نویسی وب سایت شو</h1>
-                                <p class="h5 fw-normal text-white-50 mb-4">کسب و کار سنتی شما را از طریق طراحی وب سایت به کسب و کاری سراسری و بزرگ تبدیل می کند. در کوتاه ترین زمان وب سایت شو!</p>
+                                <h1 class="h2 fw-bolder text-dark mb-2">تیم مجرب طراحی وب سایت و برنامه نویسی وب سایت شو</h1>
+                                <p class="h5 fw-normal text-dark-50 mb-4">کسب و کار سنتی شما را از طریق طراحی وب سایت و اپلیکیشن، به کسب و کاری سراسری و بزرگ تبدیل می کند. در کوتاه ترین زمان وب سایت شو!</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                     <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">درخواست مشاوره</a>
-                                    <a class="btn btn-outline-light btn-lg px-4" href="#!">اطلاعات بیشتر</a>
+                                    <a class="btn btn-outline-dark btn-lg px-4" href="#!">اطلاعات بیشتر</a>
                                 </div>
                             </div>
                         </div>
