--- a/templates/home.html
+++ b/templates/home.html
@@ -77,28 +77,34 @@
             <section class="py-5" id="features">
                 <div class="container px-5 my-5">
                     <div class="row gx-5">
-                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">A better way to start building.</h2></div>
+                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">وب سایت شو! یک راه بهتر برای توسعه کسب و کار و تجارت شما</h2></div>
                         <div class="col-lg-8">
                             <div class="row gx-5 row-cols-1 row-cols-md-2">
                                 <div class="col mb-5 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-diagram-3"></i></div>
+                                    <h2 class="h5">مشاوره و طراحی نقشه راه شما </h2>
+                                    <p class="mb-0">تیم مشاورین وب سایت شو، در تمام مراحل کسب و کار در کنار شما هستند. از طراحی نقشه راه و بیزینس پلن، تا اجرای مرحله به مرحله ی برنامه ها و ...</p>
                                 </div>
                                 <div class="col mb-5 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-globe"></i></div>
+                                    <h2 class="h5">طراحی وب سایت حرفه ای</h2>
+                                    <p class="mb-0">طراحی وب سایت متناسب با کسب و کار شما تخصص ماست. تیم برنامه نویسان ما با توجه به خواسته های شما و تیم مشاورین وب سایت شو، بهترین
+                                    طرح و نقشه را برای وبسایت شما ارائه و اجرا خواهند کرد.</p>
                                 </div>
                                 <div class="col mb-5 mb-md-0 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-code-slash"></i></div>
+                                    <h2 class="h5">برنامه نویسی اپلیکیشن موبایل و اپلیکیشن دسکتاپ</h2>
+                                    <p class="mb-0">طراحی، توسعه و برنامه نویسی نرم افزار های موبایل و دسکتاپ کامپیوتر جهت ارتقا
+                                    سطح فروش و ارائه ی خدمات به مشتریان بازار هدف. تیم مجرب برنامه نویسان وب سایت شو
+                                  با سال ها تجربه در زمینه ی برنامه نویسی و طراحی اپلیکیشن های شخصی، شرکتی و سازمانی
+                                رضایت شما را در این زمینه نیز به نحو احسن جلب خواهد نمود.</p>
                                 </div>
                                 <div class="col h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-pen"></i></div>
+                                    <h2 class="h5">تولید محتوای با کیفیت و پربار</h2>
+                                    <p class="mb-0">تیم تولید محتوای وب سایت شو، کلیه ی نیاز های شما را در زمینه ی تولید محتوا های
+                                    متنی، تصویری و ویدئویی برطرف خواهد کرد. محتوا اولین و مهمترین عامل جهت ارتقای کسب و کار دیجیتال
+                                  به حساب می آید.</p>
                                 </div>
                             </div>
                         </div>
@@ -111,13 +117,16 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-10 col-xl-7">
                             <div class="text-center">
-                                <div class="fs-4 mb-4 fst-italic">"Working with Start Bootstrap templates has saved me tons of development time when building new projects! Starting with a Bootstrap template just makes things easier!"</div>
+                                <div class="fs-4 mb-4 fst-italic">"جلب رضایت مشتری تنها از طریق صداقت و همدلی است که بدست می آید، شناخت نیاز های مشتری و تلاش جهت رفع
+                                نیاز هایش و همچنین ارائه ی خدمات با بالاترین کیفیت و تکتولوژی های روز دنیا، خط مشی اصل تیم وب سایت شو است."</div>
                                 <div class="d-flex align-items-center justify-content-center">
-                                    <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                    <!-- <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." /> -->
                                     <div class="fw-bold">
-                                        Tom Ato
-                                        <span class="fw-bold text-primary mx-1">/</span>
-                                        CEO, Pomodoro
+                                      <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-brush"></i></div>
+                                         مدیران تیم وب سایت شو
+
+                                        <!-- <span class="fw-bold text-primary mx-1">/</span> -->
+
                                     </div>
                                 </div>
                             </div>
@@ -131,8 +140,8 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-8 col-xl-6">
                             <div class="text-center">
-                                <h2 class="fw-bolder">From our blog</h2>
-                                <p class="lead fw-normal text-muted mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque fugit ratione dicta mollitia. Officiis ad.</p>
+                                <h2 class="fw-bolder">نمونه کار های ما</h2>
+                                <p class="lead fw-normal text-muted mb-5">بعضی از نمونه کار های تیم وب سایت شو را ملاحظه بفرمایید:</p>
                             </div>
                         </div>
                     </div>
