--- a/templates/home.html
+++ b/templates/home.html
@@ -1,62 +1,8 @@
+{%extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="fa"  dir="rtl">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="مشاوره و اجرای کسب و کار دیجیتال از طریق طراحی وب سایت، طراحی اپلیکیشن موبایل و برنامه نویسی پیشرفته با تیم وب سایت شو همراه شوید تا با کیفیت پشتیبانی و تعهدمان شما را به اهداف تان برسانیم" />
-        <meta name="author" content="" />
-        <title>طراحی سایت ، برنامه نویسی ، وب سایت شو</title>
-        <!-- Favicon-->
-        <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static 'styles.css' %}" rel="stylesheet" />
-        <!-- CSS only -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
-    </head>
-
-    <body class="d-flex flex-column h-100">
-        <main class="flex-shrink-0">
-            <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                <div class="container px-5">
-                    <a class="navbar-brand" href=""><img class="img-fluid rounded-3" src="{% static 'site-logo.jpg' %}" alt="..." /></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="">صفحه اصلی</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">درباره ما</a></li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">طراحی سایت</a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                    <li><a class="dropdown-item" href="blog-home.html">سایت شرکتی</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">سایت سازمانی</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">سایت فروشگاهی</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">سایت کارخانه</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">سایت آموزشی</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">سایت رسانه ای</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">سایت عمومی</a></li>
-                                </ul>
-                            </li>
-                            <!-- <li class="nav-item"><a class="nav-link" href="contact.html">طراحی سایت</a></li> -->
-                            <li class="nav-item"><a class="nav-link" href="pricing.html">نمونه کارها</a></li>
-                            <li class="nav-item"><a class="nav-link" href="faq.html">سوالات متداول</a></li>
-
-                            <!-- <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                    <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item.html">Portfolio Item</a></li>
-                                </ul>
-                            </li> -->
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+        {%block body%}
             <!-- Header-->
-            <header class="bg-light py-5">
+            <header class="bg-light py-1">
                 <div class="container px-5">
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
@@ -74,7 +20,7 @@
                 </div>
             </header>
             <!-- Features section-->
-            <section class="py-5" id="features">
+            <section class="py-1" id="features">
                 <div class="container px-5 my-5">
                     <div class="row gx-5">
                         <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">وب سایت شو! یک راه بهتر برای توسعه کسب و کار و تجارت شما</h2></div>
@@ -112,7 +58,7 @@
                 </div>
             </section>
             <!-- Testimonial section-->
-            <div class="py-5 bg-light">
+            <div class="py-1 bg-light">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-10 col-xl-7">
@@ -228,7 +174,7 @@
                     </aside>
                 </div>
             </section>
-        </main>
+
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
@@ -244,11 +190,4 @@
                 </div>
             </div>
         </footer>
-        <!-- Bootstrap core JS-->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
-        <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <!-- Core theme JS-->
-        <script src="{% static 'scripts.js' %}"></script>
-    </body>
-</html>
+        {%endblock%}
