--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Articles List</title>
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'styles.css' %}"> -->
   </head>
   <body>
     <h1>Articles List</h1>
