--- a/templates/home.html
+++ b/templates/home.html
@@ -23,22 +23,38 @@
             <section class="py-1" id="features">
                 <div class="container px-5 my-5">
                     <div class="row gx-5">
-                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">وب سایت شو! یک راه بهتر برای توسعه کسب و کار و تجارت شما</h2></div>
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                          <div class="d-flex justify-content-center py-4"><img src="{% static 'logo.jpg' %}"></div>
+                          <h2 class="fw-bolder mb-0">وب سایت شو! یک راه بهتر برای توسعه کسب و کار و تجارت شما</h2>
+                          <p class="pt-5">
+                            تیم وب سایت شو، شما را در تمام طول راه اندازی کسب و کار دیجیتال تان تا رسیدن به موفقیت همراهی میکند.
+                            پشتیبانی متعهدانه و مسئولیت پذیری تیم ما، رمز موفقیت مان است که سبب شده مشتریان وفادار بسیاری، ما را قابل بدانند تا در راه توسعه کسب و
+                            کارشان در کنارشان باشیم.
+                          </p>
+                          <p class="py-1">
+                            مدیران و پرسنل این مجموعه همگی دارای تحصیلات دانشکاهی و دارای مدارک بین المللی مرتبط با موضوع فعالیتشان
+                            می باشند که این موضوع سبب ارتقای کیفیت خدمات و جلب حداکثر رضایت مشتریانمان شده است.
+
+                          </p>
+                        </div>
                         <div class="col-lg-8">
                             <div class="row gx-5 row-cols-1 row-cols-md-2">
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-diagram-3"></i></div>
+                                    <div class="d-flex justify-content-center"><img src="{% static 'road-map-1-150.jpg' %}"></div>
                                     <h2 class="h5">مشاوره و طراحی نقشه راه شما </h2>
                                     <p class="mb-0">تیم مشاورین وب سایت شو، در تمام مراحل کسب و کار در کنار شما هستند. از طراحی نقشه راه و بیزینس پلن، تا اجرای مرحله به مرحله ی برنامه ها و ...</p>
                                 </div>
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-globe"></i></div>
+                                    <div class="d-flex justify-content-center"><img src="{% static 'web-design-150.png' %}"></div>
                                     <h2 class="h5">طراحی وب سایت حرفه ای</h2>
                                     <p class="mb-0">طراحی وب سایت متناسب با کسب و کار شما تخصص ماست. تیم برنامه نویسان ما با توجه به خواسته های شما و تیم مشاورین وب سایت شو، بهترین
                                     طرح و نقشه را برای وبسایت شما ارائه و اجرا خواهند کرد.</p>
                                 </div>
                                 <div class="col mb-5 mb-md-0 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-code-slash"></i></div>
+                                    <div class="d-flex justify-content-center"><img src="{% static 'app-150.jpg' %}"></div>
                                     <h2 class="h5">برنامه نویسی اپلیکیشن موبایل و اپلیکیشن دسکتاپ</h2>
                                     <p class="mb-0">طراحی، توسعه و برنامه نویسی نرم افزار های موبایل و دسکتاپ کامپیوتر جهت ارتقا
                                     سطح فروش و ارائه ی خدمات به مشتریان بازار هدف. تیم مجرب برنامه نویسان وب سایت شو
@@ -47,6 +63,7 @@
                                 </div>
                                 <div class="col h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-pen"></i></div>
+                                    <div class="d-flex justify-content-center"><img src="{% static 'content-150.jpg' %}"></div>
                                     <h2 class="h5">تولید محتوای با کیفیت و پربار</h2>
                                     <p class="mb-0">تیم تولید محتوای وب سایت شو، کلیه ی نیاز های شما را در زمینه ی تولید محتوا های
                                     متنی، تصویری و ویدئویی برطرف خواهد کرد. محتوا اولین و مهمترین عامل جهت ارتقای کسب و کار دیجیتال
@@ -67,9 +84,9 @@
                                 نیاز هایش و همچنین ارائه ی خدمات با بالاترین کیفیت و تکتولوژی های روز دنیا، خط مشی اصل تیم وب سایت شو است."</div>
                                 <div class="d-flex align-items-center justify-content-center">
                                     <!-- <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." /> -->
-                                    <div class="fw-bold">
-                                      <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-brush"></i></div>
-                                         مدیران تیم وب سایت شو
+                                    <div class="fw-bold d-flex text-success">
+                                      <div class="feature bg-success bg-gradient text-white rounded-2 mb-1"><i class="bi bi-brush"></i></div>
+                                            مدیران تیم وب سایت شو
 
                                         <!-- <span class="fw-bold text-primary mx-1">/</span> -->
 
